[gd_scene load_steps=5 format=3 uid="uid://ncrp8re16fd1"]

[ext_resource type="Script" path="res://Tiles/Scripts/down_outlet.gd" id="1_1sxfb"]
[ext_resource type="Texture2D" uid="uid://5hubla3in4rb" path="res://Assets/pipe.png" id="2_aaylf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hncc0"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1cbc"]
size = Vector2(16, 16)

[node name="Outlet" type="StaticBody2D"]
collision_mask = 0
script = ExtResource("1_1sxfb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_aaylf")
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hncc0")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.02
one_shot = true

[node name="Areas" type="Node2D" parent="."]

[node name="FlowDirection" type="Area2D" parent="Areas"]
collision_layer = 32769
collision_mask = 32769

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/FlowDirection"]
position = Vector2(0, 32)
shape = SubResource("RectangleShape2D_f1cbc")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
